<resources>
    <string name="app_name">SimpleEdifier</string>
    <string name="scan_start_button">Scan Start Button</string>
    <string name="connect">connect</string>
    <string name="mac_example" translatable="false">00-16-EA-AE-3C-40</string>
    <string name="device_name_example">device name</string>
    <string name="mac_address">MAC Address</string>
    <string name="device_name">Device Name</string>
    <string name="noise_mode">noise mode</string>
    <string name="standard_mode">Standard Mode</string>
    <string name="surround_mode">Surround Mode</string>
    <string name="disconnect">disconnect</string>
    <string name="connect_success">connect success</string>
    <string name="game_mode">Game Mode</string>
    <string name="game_mode_on">Game Mode On</string>
    <string name="game_mode_off">Game Mode Off</string>
    <string name="ambient_sound_volume">Ambient Sound Volume</string>
    <string name="reconnect">Connect Last paired</string>
    <string name="current_battery">Current Battery</string>
    <string name="power_off">Power Off</string>
    <string name="pc_next">Next Music</string>
    <string name="pc_prev">Last Music</string>
    <string name="pc_play">Music Play</string>
    <string name="pc_pause">Music Pause</string>
    <string name="pc_volume_up">Volume Up</string>
    <string name="pc_volume_down">Volume Down</string>
    <string name="set">Set</string>
    <string name="edifier_service_title" translatable="false">Simple Edifier Connect</string>
    <string name="click_to_change">click to change</string>
    <string name="prompt_volume">Prompt Volume</string>
    <string name="flush_data">Flush Data</string>
    <string name="classical_eq">Classical Mode</string>
    <string name="standard_eq">Stand Mode</string>
    <string name="pop_eq">Pop Mode</string>
    <string name="rock_eq">Rock Mode</string>
</resources>